--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -20,7 +20,7 @@ The `getOrganization` method is used to get the information of an organization p
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `organizationId` | `string` | The id of the organization to be found. |
+| `organizationId` | `string` | The ID of the organization to be found. |
 
 ### Returns
 
