--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -22,9 +22,9 @@ Passing null as the session will result in the current session to be removed fro
 
 If an active session already exists, it will be replaced with the new one. The change happens in three steps:
 
-1. The current <a href="/docs/references/javascript/session">`Session`</a> object is set to **undefined**, which causes the control components to stop rendering their children as though Clerk is still initializing.
-2. The **beforeEmit** callback is executed. If a `Promise` is returned, Clerk waits for the `Promise` to resolve.
-3. The current <a href="/docs/references/javascript/session">`Session`</a> is set to the passed **session**. This causes the control components to render their children again.
+1. The current <a href="/docs/references/javascript/session">`Session`</a> object is set to `undefined`, which causes the control components to stop rendering their children as though Clerk is still initializing.
+2. The `beforeEmit` callback is executed. If a `Promise` is returned, Clerk waits for the `Promise` to resolve.
+3. The current <a href="/docs/references/javascript/session">`Session`</a> is set to the passed `session`. This causes the control components to render their children again.
 
 ### Props
 
@@ -50,7 +50,7 @@ function setActive({
 }: SetActiveParams): Promise<void>;
 ```
 
-An **experimental** method used to set the active session and/or organization.
+An experimental method used to set the active session and/or organization.
 
 > This method will eventually replace `setSession`.
 
@@ -58,8 +58,8 @@ An **experimental** method used to set the active session and/or organization.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `session` | `Session` \| `string` \| `null` | The session resource or session id (string version) to be set as active. If `null`, the current session is deleted. |
-| `organization` | [`Organization`](/docs/references/javascript/organization/organization) \| `string` \| `null` | The organization resource or organization id (string version) to be set as active in the current session. If `null`, the currently active organization is removed as active. |
+| `session` | `Session \| string \| null` | The session resource or session ID (string version) to be set as active. If `null`, the current session is deleted. |
+| `organization` | `[Organization](/docs/references/javascript/organization/organization) \| string \| null` | The organization resource or organization ID (string version) to be set as active in the current session. If `null`, the currently active organization is removed as active. |
 | `beforeEmit?` | `(session?: Session \| null) => void \| Promise<any>` | Callback run just before the active session and/or organization is set to the passed object. Can be used to hook up for pre-navigation actions. |
 
 ### Returns
