--- a/docs/references/javascript/client.mdx
+++ b/docs/references/javascript/client.mdx
@@ -3,10 +3,6 @@ title: Client
 description: The Client object keeps track of the authenticated sessions in the current device. The device can be a browser, a native application or any other medium that is usually the requesting part in a request/response architecture.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `Client`
 
 The `Client` object keeps track of the authenticated sessions in the current device. The device can be a browser, a native application or any other medium that is usually the requesting part in a request/response architecture.
@@ -19,8 +15,8 @@ The `Client` object also holds information about any sign in or sign up attempts
   headings={["Name", "Type", "Description"]}
   headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
   rows={[
-{cells: [<code>signIn</code>, <code>SignIn | null</code>, <>The current sign in attempt, or null if there is none.</>]},
-{cells: [<code>signUp</code>, <code>SignUp  | null</code>, <>The current sign up attempt, or null if there is none.</>]},
+{cells: [<code>signIn</code>, <code>SignIn | null</code>, <>The current sign in attempt, or <code>null</code> if there is none.</>]},
+{cells: [<code>signUp</code>, <code>SignUp  | null</code>, <>The current sign up attempt, or <code>null</code> if there is none.</>]},
 {cells: [<code>sessions</code>, <code><a href="/docs/references/javascript/session">Session</a>[]</code>, <>A list of sessions that have been created on this client.</>]},
 {cells: [<code>activeSessions</code>, <code><a href="/docs/references/javascript/session">Session</a>[]</code>, <>A list of active sessions on this client.</>]},
 {cells: [<code>lastActiveSessiond</code>, <code>string</code>, <>Unique identifier of the last active <a href="/docs/references/javascript/session">Session</a> on this client.</>]},
@@ -36,7 +32,7 @@ The `Client` object also holds information about any sign in or sign up attempts
 function isNew(): boolean;
 ```
 
-Returns **true** if this client hasn't been saved (created) yet in the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference), **false** otherwise.
+Returns `true` if this client hasn't been saved (created) yet in the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference). Returns `false` otherwise.
 
 ### `create()`
 
