--- a/docs/references/javascript/external-account.mdx
+++ b/docs/references/javascript/external-account.mdx
@@ -3,10 +3,6 @@ title: ExternalAccount
 description: The ExternalAccount object is a model around an identification obtained by an external provider (e.g. an OAuth provider such as Google).
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `ExternalAccount`
 
 The `ExternalAccount` object is a model around an identification obtained by an external provider (e.g. an OAuth provider such as Google).
@@ -22,9 +18,9 @@ External account must be verified, so that you can make sure they can be assigne
   rows={[
  {cells: [<code>id</code>, <code>string</code>, <>A unique identifier for this external account.</>]},
 {cells: [<code>identificationId</code>, <code>string</code>, <>The identification with which this external account is associated.</>]},
-{cells: [<code>provider</code>, <code>string</code>, <>The provider name e.g. `google`</>]},
+{cells: [<code>provider</code>, <code>string</code>, <>The provider name e.g. <code>google</code></>]},
 {cells: [<code>publicMetadata</code>, <code>object</code>, <>Metadata provided about the user from the provider</>]},
-{cells: [<code>providerUserId</code>, <code>string</code>, <>The unique id of the user in the provider.</>]},
+{cells: [<code>providerUserId</code>, <code>string</code>, <>The unique ID of the user in the provider.</>]},
 {cells: [<code>emailAddress</code>, <code>string</code>, <>The provided email address of the user.</>]},
 {cells: [<code>approvedScopes</code>, <code>string[]</code>, <>The scopes that the user has granted access to.</>]},
 {cells: [<code>firstName</code>, <code>string</code>, <>The provided first name of the user.</>]},
