--- a/docs/references/javascript/organization-invitation.mdx
+++ b/docs/references/javascript/organization-invitation.mdx
@@ -3,10 +3,6 @@ title: OrganizationInvitation
 description: The OrganizationInvitation object is the model around an organization invitation.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `OrganizationInvitation`
 
 The `OrganizationInvitation` object is the model around an organization invitation.
@@ -30,7 +26,7 @@ The `OrganizationInvitation` object is the model around an organization invitati
         {cells: [
         <code>organizationId</code>,
         <code>string</code>,
-        "The organization id of the organization this invitation is for.",
+        "The organization ID of the organization this invitation is for.",
         ]},
         {cells: [
         <code>publicMetadata</code>,
