--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -3,10 +3,6 @@ title: Organization
 description: This is a class that represents an organziation. It's returned from the createOrganization and getOrganization methods on the Clerk class instance.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `Organization`
 
 This is a class that represents an organization. It's returned from the [`createOrganization`](/docs/references/javascript/clerk/create-organization) and [`getOrganization`](/docs/references/javascript/clerk/organization-methods) methods on [the `Clerk` class instance](/docs/references/javascript/clerk/clerk).
@@ -24,8 +20,7 @@ This is a class that represents an organization. It's returned from the [`create
   {cells: [ <code>imageUrl</code>, <code>string</code>, "Holds the organization logo or default logo"]},
   {cells: [ <code>membersCount</code>, <code>number</code>, "The number of members the associated organization contains"]},
   {cells: [ <code>pendingInvitationsCount</code>, <code>number</code>, "The number of pending invitations to users to join the organization."]},
-  {cells: [ <code>publicMetadata</code>, <code>object</code>, <>
-  Additional information about the organization that can be read through the <a href="https://reference.clerk.dev/reference/frontend-api-reference">Frontend API</a>, but written only from the <a href="https://clerk.com/docs/reference/backend-api">Backend API</a>.
+  {cells: [ <code>publicMetadata</code>, <code>object</code>, <>Additional information about the organization that can be read through the <a href="https://reference.clerk.dev/reference/frontend-api-reference">Frontend API</a>, but written only from the <a href="https://clerk.com/docs/reference/backend-api">Backend API</a>.
   </>]},
   {cells: [ <code>createdAt</code>, <code>Date</code>, "Date of the time the organization was created."]},
   {cells: [ <code>updatedAt</code>, <code>Date</code>, "Date of the last time the user was updated."]},
