--- a/docs/references/javascript/session-with-activities.mdx
+++ b/docs/references/javascript/session-with-activities.mdx
@@ -3,10 +3,6 @@ title: SessionWithActivities
 description: The SessionWithActivities object is a modified Session object. It contains most of the information that the Session object stores, adding extra information about the current session's latest activity.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `SessionWithActivities`
 
 The `SessionWithActivities` object is a modified [Session](/docs/references/javascript/session) object. It contains most of the information that the `Session` object stores, adding extra information about the current session's latest activity.
@@ -58,7 +54,7 @@ Users can revoke only their own sessions.
 {cells: [<code>ipAddress</code>, <code>string | undefined</code>, <>The IP address from which this session activity originated.</>]},
 {cells: [<code>city</code>, <code>string | undefined</code>, <>The city from which this session activity occurred. Resolved by IP address geo-location.</>]},
 {cells: [<code>country</code>, <code>string | undefined</code>, <>The country from which this session activity occurred. Resolved by IP address geo-location.</>]},
-{cells: [<code>isMobile</code>, <code>boolean | undefined</code>, <>Will be set to true if the session activity came from a mobile device, false otherwise.</>]},
+{cells: [<code>isMobile</code>, <code>boolean | undefined</code>, <>Will be set to `true` if the session activity came from a mobile device. Set to `false` otherwise.</>]},
     ]}
     />
 
@@ -76,9 +72,9 @@ type SessionStatus = "abandoned" | "active" | "ended" | "expired" | "removed" | 
   rows={[
 {cells: [<code>abandoned</code>, <>The session was abandoned client-side.</>]},
 {cells: [<code>active</code>, <>The session is valid and all activity is allowed.</>]},
-{cells: [<code>ended</code>, <>The user signed out of the session, but the `Session` remains in the Client object.</>]},
+{cells: [<code>ended</code>, <>The user signed out of the session, but the <code>Session</code> remains in the <code>Client</code> object.</>]},
 {cells: [<code>expired</code>, <>The period of allowed activity for this session has passed.</>]},
-{cells: [<code>removed</code>, <>The user signed out of the session and the `Session` was removed from the Client object.</>]},
-{cells: [<code>replaced</code>, <>The session has been replaced by another one, but the `Session` remains in the Client object.</>]},
-{cells: [<code>revoked</code>, <>he application ended the session and the `Session` was removed from the Client object.</>]},  ]}
+{cells: [<code>removed</code>, <>The user signed out of the session and the <code>Session</code> was removed from the <code>Client</code> object.</>]},
+{cells: [<code>replaced</code>, <>The session has been replaced by another one, but the <code>Session</code> remains in the <code>Client</code> object.</>]},
+{cells: [<code>revoked</code>, <>he application ended the session and the <code>Session</code> was removed from the <code>Client</code> object.</>]},  ]}
 />
