--- a/docs/references/javascript/sign-in/first-factor.mdx
+++ b/docs/references/javascript/sign-in/first-factor.mdx
@@ -3,10 +3,6 @@ title: First Factor
 description: These are all methods on the SignIn class that allow you to handle the first factor of a multi-factor authentication flow.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # First Factor
 
 These are all methods on [the `SignIn` class](/docs/references/javascript/sign-in/sign-in) that allow you to handle the first factor of a multi-factor authentication flow.
@@ -30,18 +26,18 @@ Common scenarios are one-time code (OTP) or social account (SSO) verification. T
  {cells: [<code>strategy </code>, <code>string</code>, <>
  The <code>strategy</code> value depends on the object's <code>identifier</code> value. Each authentication identifier supports different verification strategies. Possible strategy values are:
  <ul> 
-<li><strong><code>email_link</code></strong>: User will receive an email magic link via email. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
-<li><strong><code>email_code</code></strong>: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
-<li><strong><code>phone_code</code></strong>: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The <code>phone_number_id</code> parameter can also be specified to select which of the user's known phone numbers the SMS will go to.</li>
-<li><strong><code>web3_metamask_signature</code></strong>: The verification will attempt to be completed using the user's web3 wallet public address. The <code>web3_wallet_id</code> parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports <a href="https://metamask.io/">Metamask</a >.</li>
-<li><strong><code>{"oauth_<provider>"}</code></strong>: The user will be authenticated with their Social login account. See available <a href="/docs/references/javascript/sign-in/authenticate-with#o-auth-strategy">OAuth Strategies</a>.</li>
+<li><code>email_link</code>: User will receive an email magic link via email. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
+<li><code>email_code</code>: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
+<li><code>phone_code</code>: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The <code>phone_number_id</code> parameter can also be specified to select which of the user's known phone numbers the SMS will go to.</li>
+<li><code>web3_metamask_signature</code>: The verification will attempt to be completed using the user's web3 wallet public address. The <code>web3_wallet_id</code> parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports <a href="https://metamask.io/">Metamask</a >.</li>
+<li><code>{"oauth_<provider>"}</code>: The user will be authenticated with their Social login account. See available <a href="/docs/references/javascript/sign-in/authenticate-with#o-auth-strategy">OAuth Strategies</a>.</li>
  </ul>
  </>]},
-{cells: [<code>emailAddressId?</code>, <code>string</code>, <>Unique identifier for the user's email address that will receive an email message with the one-time authentication code. This parameter will work only when the <strong><code>email_code</code></strong> strategy is specified.</>]},
-{cells: [<code>phoneNumberId?</code>, <code>string</code>, <>Unique identifier for the user's phone number that will receive an SMS message with the one-time authentication code. This parameter will work only when the <strong><code>phone_code</code></strong> strategy is specified.</>]},
-{cells: [<code>web3WalletId?</code>, <code>string</code>, <>Unique identifier for the user's web3 wallet public address. This parameter will work only when the <strong><code>web3_metamask_signature</code></strong> strategy is specified.</>]},
-{cells: [<code>redirectUrl?</code>, <code>string</code>, <>The URL that the OAuth provider should redirect to, on successful authorization on their part. This parameter is required only for OAuth strategies <strong><code>(oauth_*)</code></strong>. </>]},
-{cells: [<code>actionCompleteRedirectUrl?</code>, <code>string</code>, <>The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only for OAuth strategies <strong><code>(oauth_*)</code></strong>. </>]},
+{cells: [<code>emailAddressId?</code>, <code>string</code>, <>Unique identifier for the user's email address that will receive an email message with the one-time authentication code. This parameter will work only when the <code>email_code</code> strategy is specified.</>]},
+{cells: [<code>phoneNumberId?</code>, <code>string</code>, <>Unique identifier for the user's phone number that will receive an SMS message with the one-time authentication code. This parameter will work only when the <code>phone_code</code> strategy is specified.</>]},
+{cells: [<code>web3WalletId?</code>, <code>string</code>, <>Unique identifier for the user's web3 wallet public address. This parameter will work only when the <code>web3_metamask_signature</code> strategy is specified.</>]},
+{cells: [<code>redirectUrl?</code>, <code>string</code>, <>The URL that the OAuth provider should redirect to, on successful authorization on their part. This parameter is required only for OAuth strategies <code>(oauth_*)</code>. </>]},
+{cells: [<code>actionCompleteRedirectUrl?</code>, <code>string</code>, <>The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only for OAuth strategies <code>(oauth_*)</code>. </>]},
  ]}
 />
 
@@ -76,15 +72,15 @@ Depending on the strategy that was selected when the verification was prepared, 
     {cells: [<code>strategy </code>, <code>string</code>, <>
     The <code>strategy</code> value depends on the object's <code>identifier</code> value. Each authentication identifier supports different verification strategies. Possible <code>strategy</code> values are:
     <ul>
-    <li><strong><code>email_link</code></strong>: User will receive an email magic link via email. The email_address_id parameter can also be specified to select one of the user's known email addresses.</li>
-    <li><strong><code>email_code</code></strong>: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The email_address_id parameter can also be specified to select one of the user's known email addresses.</li>
-    <li><strong><code>phone_code</code></strong>: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The phone_number_id parameter can also be specified to select which of the user's known phone numbers the SMS will go to.</li>
-    <li><strong><code>password</code></strong>: The verification will attempt to be completed with the user's password.</li>
-    <li><strong><code>web3_metamask_signature</code></strong>: The verification will attempt to be completed using the user's web3 wallet public address.</li>
+    <li><code>email_link</code>: User will receive an email magic link via email. The email_address_id parameter can also be specified to select one of the user's known email addresses.</li>
+    <li><code>email_code</code>: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The email_address_id parameter can also be specified to select one of the user's known email addresses.</li>
+    <li><code>phone_code</code>: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The phone_number_id parameter can also be specified to select which of the user's known phone numbers the SMS will go to.</li>
+    <li><code>password</code>: The verification will attempt to be completed with the user's password.</li>
+    <li><code>web3_metamask_signature</code>: The verification will attempt to be completed using the user's web3 wallet public address.</li>
     </ul>
     </>]},
-    {cells: [<code>code?</code>, <code>string</code>, <>The one-time code that was sent to the user as part of this verification step. Required when <code>strategy</code> is <strong><code>email_code</code></strong> or <strong><code>phone_code</code></strong>.</>]},
-    {cells: [<code>password?</code>, <code>string</code>, <>The user's password string. Required when <code>strategy</code> is <strong><code>password</code></strong>.</>]},
+    {cells: [<code>code?</code>, <code>string</code>, <>The one-time code that was sent to the user as part of this verification step. Required when <code>strategy</code> is <code>email_code</code> or <code>phone_code</code>.</>]},
+    {cells: [<code>password?</code>, <code>string</code>, <>The user's password string. Required when <code>strategy</code> is <code>password</code>.</>]},
     {cells: [<code>signature?</code>, <code>string</code>, <>Web3 wallet generated signature to be verified. This parameter is required only for web3 verification strategies.</>]},
   ]}
 />
