--- a/docs/references/javascript/sign-in/sign-in.mdx
+++ b/docs/references/javascript/sign-in/sign-in.mdx
@@ -3,10 +3,6 @@ title: SignIn
 description: The SignIn object holds all the state of the current sign in and provides helper methods to navigate and complete the sign in process.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `SignIn`
 
 The `SignIn` object holds all the state of the current sign in and provides helper methods to navigate and complete the sign in process.
@@ -30,39 +26,39 @@ The `SignIn` object's properties can be split into logical groups, with each gro
     {cells: [<code>status</code>, <code>string</code>, <>
     The current status of the sign-in. It can take the following values:
     <ul>
-     <li><code><strong>needs_identifier</strong></code>: The authentication identifier hasn't been provided.</li>
-     <li><code><strong>needs_first_factor</strong></code>: First factor verification for the provided identifier needs to be prepared and verified.</li>
-     <li><code><strong>needs_second_factor</strong></code>: Second factor verification (2FA) for the provided identifier needs to be prepared and verified.</li>
-     <li><code><strong>complete</strong></code>: The sign-in is complete and the user is authenticated.</li>
-     <li><code><strong>abandoned</strong></code>: The sign-in has been inactive for a long period of time, thus it's considered as abandoned and need to start over.</li>
+     <li><code>needs_identifier</code>: The authentication identifier hasn't been provided.</li>
+     <li><code>needs_first_factor</code>: First factor verification for the provided identifier needs to be prepared and verified.</li>
+     <li><code>needs_second_factor</code>: Second factor verification (2FA) for the provided identifier needs to be prepared and verified.</li>
+     <li><code>complete</code>: The sign-in is complete and the user is authenticated.</li>
+     <li><code>abandoned</code>: The sign-in has been inactive for a long period of time, thus it's considered as abandoned and need to start over.</li>
      </ul>
     </>]},
     {cells: [<code>supportedIdentifiers</code>, <code>string[]</code>, <>Array of all the authentication identifiers that are supported for this sign in. Examples of this could be:
     <ul>
-    <li><code><strong>email_address</strong></code></li>
-    <li><code><strong>phone_number</strong></code></li>
-    <li><code><strong>web3_wallet</strong></code></li>
-    <li><code><strong>username</strong></code></li>
+    <li><code>email_address</code></li>
+    <li><code>phone_number</code></li>
+    <li><code>web3_wallet</code></li>
+    <li><code>username</code></li>
     </ul>
     </>]},
     {cells: [<code>identifier</code>, <code>string | null</code>, <>The authentication identifier value for the current sign-in.</>]},
     {cells: [<code>supportedExternalAccounts</code>, <code>string[]</code>, <>Array of all the external accounts that can be used in this sign in. For example:<br/><code>["oauth_google", "oauth_facebook"]</code></>]},
     {cells: [<code>supportedFirstFactors</code>, <code>SignInFactor[]</code>, <>Array of the first factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used. For example:
     <ul>
-    <li><strong><code>email_code</code></strong> for email addresses</li>
-    <li><strong><code>phone_code</code></strong> for phone numbers</li>
+    <li><code>email_code</code> for email addresses</li>
+    <li><code>phone_code</code> for phone numbers</li>
     </ul>
     As well as the identifier that the factor refers to.</>]},
     {cells: [<code>supportedSecondFactors</code>, <code>SignInFactor[]</code>, <>Array of the second factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used, for example:
     <ul>
-    <li><strong><code>email_code</code></strong> for email addresses</li>
-    <li><strong><code>totp</code></strong> for TOTPs</li>
+    <li><code>email_code</code> for email addresses</li>
+    <li><code>totp</code> for TOTPs</li>
     </ul>
     As well as the identifier that the factor refers to. Please note that this property is populated only when the first factor is verified.</>]},
     {cells: [<code>firstFactorVerification</code>, <code>Verification</code>, <>The state of the verification process for the selected first factor. Please note that this property contains an empty verification object initially, since there is no first factor selected. You need to call the <a href="/docs/references/javascript/sign-in/first-factor#prepare-first-factor"><code>prepareFirstFactor</code></a> method in order to start the verification process.</>]},
-    {cells: [<code>secondFactorVerification</code>, <code>Verification</code>, <>The state of the verification process for the selected second factor. Similar to <strong><code>firstFactorVerification</code></strong>, this property contains an empty verification object initially, since there is no second factor selected. For the <code>phone_code</code> strategy, you need to call the <a href="/docs/references/javascript/sign-in/second-factor#prepare-second-factor"><code>prepareSecondFactor</code></a> method in order to start the verification process. For the <code>totp</code> strategy you can directly attempt.</>]},
+    {cells: [<code>secondFactorVerification</code>, <code>Verification</code>, <>The state of the verification process for the selected second factor. Similar to <code>firstFactorVerification</code>, this property contains an empty verification object initially, since there is no second factor selected. For the <code>phone_code</code> strategy, you need to call the <a href="/docs/references/javascript/sign-in/second-factor#prepare-second-factor"><code>prepareSecondFactor</code></a> method in order to start the verification process. For the <code>totp</code> strategy you can directly attempt.</>]},
     {cells: [<code>userData</code>, <code>UserDate</code>, <>An object containing information about the user of the current sign in. This property is populated only once an identifier is given to the <code>SignIn</code> object.</>]},
-    {cells: [<code>createdSessionId</code>, <code>string | null</code>, <>The identifier of the session that was created upon completion of the current sign-in. The value of this property is <strong><code>null</code></strong> if the sign-in status is not <strong><code>complete</code></strong>.</>]},
+    {cells: [<code>createdSessionId</code>, <code>string | null</code>, <>The identifier of the session that was created upon completion of the current sign-in. The value of this property is <code>null</code> if the sign-in status is not <code>complete</code>.</>]},
   ]}
 />
 
@@ -89,17 +85,17 @@ Depending on the use-case and the `params` you pass to the `create` method, it c
     {cells: [<code>identifier</code>, <code>string</code>, <>The authentication identifier for the sign in. This can be the value of the user's email address, phone number or username.</>]},
 {cells: [<code>strategy</code>, <code>string</code>,<>Optional. Select the first factor verification strategy. The <code>strategy</code> value depends on the object's <code>identifier</code> value. Each authentication identifier supports different verification strategies. Possible <code>strategy</code> values are:
 <ul>
-<li><strong><code>email_link</code></strong>: User will receive an email magic link via email. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
-<li><strong><code>email_code</code></strong>: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
-<li><strong><code>phone_code</code></strong>: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The <code>phone_number_id</code> parameter can also be specified to select which of the user's known phone numbers the SMS will go to.</li>
-<li><strong><code>web3_metamask_signature</code></strong>: The verification will attempt to be completed using the user's web3 wallet public address. The <code>web3_wallet_id</code> parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports [Metamask](https://metamask.io/).</li>
-<li><strong><code>{"oauth_<provider>"}</code></strong>: The user will be authenticated with their Social login account. See available OAuth Strategies.</li>
-<li><strong><code>ticket</code></strong>: The user will be authenticated via a "ticket" or "token" generated from the Backend API.</li>
+<li><code>email_link</code>: User will receive an email magic link via email. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
+<li><code>email_code</code>: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
+<li><code>phone_code</code>: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The <code>phone_number_id</code> parameter can also be specified to select which of the user's known phone numbers the SMS will go to.</li>
+<li><code>web3_metamask_signature</code>: The verification will attempt to be completed using the user's web3 wallet public address. The <code>web3_wallet_id</code> parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports [Metamask](https://metamask.io/).</li>
+<li><code>{"oauth_<provider>"}</code>: The user will be authenticated with their Social login account. See available OAuth Strategies.</li>
+<li><code>ticket</code>: The user will be authenticated via a "ticket" or "token" generated from the Backend API.</li>
 </ul></>]},
-{cells: [<code>password</code>, <code>string</code>, <>Optional. Supply the user's password, if <strong><code>password</code></strong> strategy has been specified.</>]},
-{cells: [<code>ticket</code>, <code>string</code>, <>Optional. If the strategy is <strong><code>ticket</code></strong> you need to provide the ticket <em>or token</em> generated from the Backend API.</>]},
-{cells: [<code>redirectUrl</code>, <code>string</code>, <>The URL that the OAuth provider should redirect to, on successful authorization on their part. This parameter is required only for OAuth strategies <strong><code>(oauth_*)</code></strong>.</>]},
-{cells: [<code>actionCompleteRedirectUrl</code>, <code>string</code>, <>The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only for OAuth strategies <strong><code>(oauth_*)</code></strong>.</>]},
+{cells: [<code>password</code>, <code>string</code>, <>Optional. Supply the user's password, if <code>password</code> strategy has been specified.</>]},
+{cells: [<code>ticket</code>, <code>string</code>, <>Optional. If the strategy is <code>ticket</code> you need to provide the ticket <em>or token</em> generated from the Backend API.</>]},
+{cells: [<code>redirectUrl</code>, <code>string</code>, <>The URL that the OAuth provider should redirect to, on successful authorization on their part. This parameter is required only for OAuth strategies <code>(oauth_*)</code>.</>]},
+{cells: [<code>actionCompleteRedirectUrl</code>, <code>string</code>, <>The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only for OAuth strategies <code>(oauth_*)</code>.</>]},
 {cells: [<code>transfer</code>, <code>boolean</code>, <>Transfer the user to a dedicated sign in for an oauth flow.</>]},
   ]}
   />
@@ -128,7 +124,7 @@ function resetPassword(params: ResetPasswordParams): Promise<SignIn>;
   headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
   rows={[
     {cells: [<code>password</code>, <code>string</code>, <>The user's current password.</>]},
-    {cells: [<code>signOutOfOtherSessions</code>, <code>boolean | undefined</code>, <>If <strong><code>true</code></strong>, log the user out of all other authenticated sessions.</>]},
+    {cells: [<code>signOutOfOtherSessions</code>, <code>boolean | undefined</code>, <>If <code>true</code>, log the user out of all other authenticated sessions.</>]},
   ]}
 />
 
