--- a/docs/references/javascript/sign-up/email-verification.mdx
+++ b/docs/references/javascript/sign-up/email-verification.mdx
@@ -3,10 +3,6 @@ title: Email Verification
 description: These are all methods on the SignUp class that allow you to verify a user's sign-up request via email.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Email verification
 
 These are all methods on [the `SignUp` class](/docs/references/javascript/sign-up/sign-up) that allow you to verify a user's sign-up request via email.
@@ -33,8 +29,8 @@ The defaults of this method are equivalent to calling [`SignUp.prepareVerificati
       <>
       The verification strategy to validate the user's sign-up request. The following strategies are supported:
       <ul>
-        <li><strong><code>email_code</code></strong>: Send an email with a unique token to input.</li>
-        <li><strong><code>email_link</code></strong>: Send an email with a link which validates sign-up</li>
+        <li><code>email_code</code>: Send an email with a unique token to input.</li>
+        <li><code>email_link</code>: Send an email with a link which validates sign-up</li>
       </ul>
       </>
  ]},
