--- a/docs/references/javascript/sign-up/sign-up.mdx
+++ b/docs/references/javascript/sign-up/sign-up.mdx
@@ -3,10 +3,6 @@ title: SignUp
 description: The SignUp object holds the state of the current sign up and provides helper methods to navigate and complete the sign up flow. Once a sign up is complete, a new user is created.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `SignUp`
 
 The `SignUp` object holds the state of the current sign up and provides helper methods to navigate and complete the [sign up flow](/docs/custom-flows/overview#sign-up-flow). Once a sign up is complete, a new user is created.
@@ -32,9 +28,9 @@ Also, the attributes of the `SignUp` object can basically be grouped into three 
   rows={[
 {cells: [<code>status</code>, <code>string | null</code>, <>The status of the current sign-up. It can take the following values:
 <ul>
-<li><strong><code>missing_requirements:</code></strong> There are required fields that are either missing or they are unverified.</li>
-<li><strong><code>complete:</code></strong> All the required fields have been supplied and verified, so the sign-up is complete and a new user and a session have been created.</li>
-<li><strong><code>abandoned:</code></strong> The sign-up has been inactive for a long period of time, thus it's considered as abandoned and need to start over.</li>
+<li><code>missing_requirements:</code> There are required fields that are either missing or they are unverified.</li>
+<li><code>complete:</code> All the required fields have been supplied and verified, so the sign-up is complete and a new user and a session have been created.</li>
+<li><code>abandoned:</code> The sign-up has been inactive for a long period of time, thus it's considered as abandoned and need to start over.</li>
 </ul>
 </>]},
 {cells: [<code>requiredFields</code>, <code>string[]</code>, <>An array of all the required fields that need to be supplied and verified in order for this sign-up to be marked as complete and converted into a user.</>]},
@@ -45,7 +41,7 @@ Also, the attributes of the `SignUp` object can basically be grouped into three 
 {cells: [<code>username</code>, <code>string | null</code>, <>The username supplied to the current sign-up. This attribute is available only if usernames are enabled. Check the available instance settings for more information.</>]},
 {cells: [<code>emailAddress</code>, <code>string | null</code>, <>The email address supplied to the current sign-up. This attribute is available only if the selected contact information includes email address. Check the available instance settings for more information</>]},
 {cells: [<code>phoneNumber</code>, <code>string | null</code>, <>The phone number supplied to the current sign-up. This attribute is available only if the selected contact information includes phone number. Check the available instance settings for more information.</>]},
-{cells: [<code>web3Wallet</code>, <code>string | null</code>, <>The Web3 wallet public address supplied to the current sign-up. In <a href="https://docs.metamask.io/guide/common-terms.html#address-public-key">Ethereum</a>, the address is made up of <strong><code>0x</code> + <code>40 hexadecimal characters</code></strong>.</>]},
+{cells: [<code>web3Wallet</code>, <code>string | null</code>, <>The Web3 wallet public address supplied to the current sign-up. In <a href="https://docs.metamask.io/guide/common-terms.html#address-public-key">Ethereum</a>, the address is made up of <code>0x</code> + <code>40 hexadecimal characters</code>.</>]},
 {cells: [<code>hasPassword</code>, <code>boolean</code>, <>The value of this attribute is true if a password was supplied to the current sign-up. This attribute is available only if password-based authentication is enabled. Check the available instance settings for more information.</>]},
 {cells: [<code>firstName</code>, <code>string | null</code>, <>The first name supplied to the current sign-up. This attribute is available only if name is enabled in personal information. Check the available for more information. lastName</>]},
 {cells: [<code>lastName</code>, <code>string | null</code>, <>The last name supplied to the current sign-up. This attribute is available only if name is enabled in personal information. Check the available instance settings for more information.</>]},
@@ -83,7 +79,7 @@ The `create` method will return a promise of the new SignUp object. This sign up
 {cells: [<code>gender</code>, <code>string | null</code>, <>The user's gender. This option is available only if gender is selected in personal information. Please check the instance settings for more information.</>]},
 {cells: [<code>emailAddress</code>, <code>string | null</code>, <>The user's email address. This option is available only if email address is selected in contact information. Keep in mind that the email address requires an extra verification process. Please check the instance settings for more information.</>]},
 {cells: [<code>phoneNumber</code>, <code>string | null</code>, <>The user's phone number. This option is available only if phone number is selected in contact information. Keep in mind that the phone number requires an extra verification process. Please check the instance settings for more information.</>]},
-{cells: [<code>web3Wallet</code>, <code>string | null</code>, <>The user's Web3 wallet public address. In <a href="https://docs.metamask.io/guide/common-terms.html#address-public-key">Ethereum</a>, the address is made up of <strong><code>0x</code> + <code>40 hexadecimal characters</code></strong>.</>]},
+{cells: [<code>web3Wallet</code>, <code>string | null</code>, <>The user's Web3 wallet public address. In <a href="https://docs.metamask.io/guide/common-terms.html#address-public-key">Ethereum</a>, the address is made up of <code>0x</code> + <code>40 hexadecimal characters</code>.</>]},
 {cells: [<code>username</code>, <code>string | null</code>, <>The user's username. This option is available only if usernames are enabled. Please check the instance settings for more information.</>]},
 {cells: [<code>unsafeMetadata</code>, <code>{"\{\[string\]\: any\} \| null"}</code>, <>Metadata that can be read and set from the frontend. Once the sign up is complete, the value of this field will be automatically copied to the newly created user's unsafe metadata. One common use case for this attribute is to use it to implement custom fields that can be collected during sign up and will automatically be attached to the created User object.</>]},
 {cells: [<code>strategy</code>, <code>{"OAuthStrategy \| SamlStrategy \| TicketStrategy"}</code>, <>The strategy to use for the sign-up flow.</>]},
