--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -3,10 +3,6 @@ title: Create User Metadata
 description: These are the methods that help you create data for the user, such as createEmailAddress() and createPhoneNumber().
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Create User Metadata
 
 ## `createEmailAddress()`
@@ -80,7 +76,7 @@ Adds a web3 wallet for the user. A new <a href="/docs/references/javascript/web3
   headings={["Name", "Type", "Description"]}
   headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
   rows={[
-{cells: [<code>web3Wallet</code>, <code>string</code>, <>In <a href="https://docs.metamask.io/guide/common-terms.html#address-public-key">Ethereum</a>, the address is made up of <strong><code>0x + 40 hexadecimal characters</code></strong>. </>]},
+{cells: [<code>web3Wallet</code>, <code>string</code>, <>In <a href="https://docs.metamask.io/guide/common-terms.html#address-public-key">Ethereum</a>, the address is made up of <code>0x + 40 hexadecimal characters</code>. </>]},
   ]}
   />
 
@@ -126,7 +122,7 @@ Adds an external account for the user. A new <a href="/docs/references/javascrip
  ]}
   />
 
-The initial `state` of the returned ExternalAccount will be `unverified`. To initiate the connection with the external provider one should redirect to the `externalAccount.verification.externalVerificationRedirectURL` contained in the result of `createExternalAccount`.
+The initial `state` of the returned `ExternalAccount` will be `unverified`. To initiate the connection with the external provider one should redirect to the `externalAccount.verification.externalVerificationRedirectURL` contained in the result of `createExternalAccount`.
 
 Upon return, one can inspect within the `user.externalAccounts` the entry that corresponds to the requested strategy:
 
