--- a/docs/references/javascript/web3-wallet/verification.mdx
+++ b/docs/references/javascript/web3-wallet/verification.mdx
@@ -3,10 +3,6 @@ title: Web3Wallet Verification
 description: These are all methods on the Web3Wallet class that allow you to verify a user's web3 wallet.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `Web3Wallet` verification
 
 These are all methods on [the `Web3Wallet` class](/docs/references/javascript/web3-wallet/web3-wallet) that allow you to verify a user's web3 wallet.
@@ -29,7 +25,7 @@ Kick off the verification process for this web3 wallet. The user will be prompte
 {cells: [<code>strategy</code>, <code>string</code>, <>
 The verification strategy. Possible strategy values are:
 <ul>
-<li><strong><code>web3_metamask_signature</code></strong>: User will need to sign a message and generate a signature using MetaMask browser extension.</li>
+<li><code>web3_metamask_signature</code>: User will need to sign a message and generate a signature using MetaMask browser extension.</li>
 </ul>
 </>]},
   ]}
