--- a/docs/references/javascript/web3-wallet/web3-wallet.mdx
+++ b/docs/references/javascript/web3-wallet/web3-wallet.mdx
@@ -3,10 +3,6 @@ title: Web3Wallet
 description: The Web3Wallet object describes a Web3 wallet address. The address can be used as a proof of identification for users.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `Web3Wallet`
 
 The `Web3Wallet` object describes a Web3 wallet address. The address can be used as a proof of identification for users.
@@ -25,7 +21,7 @@ The second and final step involves an attempt to complete the verification by ca
   headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
   rows={[
 {cells: [<code>id</code>, <code>string</code>, <>A unique identifier for this web3 wallet.</>]},
-{cells: [<code>web3Wallet</code>, <code>string</code>, <>In <a href="https://docs.metamask.io/guide/common-terms.html#address-public-key">Ethereum</a>, the address is made up of <strong><code>0x + 40 hexadecimal characters</code></strong>. </>]},
+{cells: [<code>web3Wallet</code>, <code>string</code>, <>In <a href="https://docs.metamask.io/guide/common-terms.html#address-public-key">Ethereum</a>, the address is made up of <code>0x + 40 hexadecimal characters</code>. </>]},
 {cells: [<code>verification</code>, <a href="/docs/references/javascript/verification"><code>Verification</code></a>, <>An object holding information on the verification of this web3 wallet.</>]},
   ]}
 />
