--- a/docs/references/javascript/clerk/organization-switcher.mdx
+++ b/docs/references/javascript/clerk/organization-switcher.mdx
@@ -146,8 +146,8 @@ All props below are optional.
 | `appearance` | `object` | Control the look and feel of the component. |
 | `createOrganizationUrl` | `string` | Full URL or path where the `<CreateOrganization />`component is mounted. |
 | `organizationProfileUrl` | `string` | Full URL or path where the `<OrganizationProfile />` component is mounted. |
-| `createOrganizationMode` | `'modal' \| 'navigation'` | Controls whether clicking the "Create organization" button will cause the `<CreateOrganization />` component to open as a modal, or if the browser will navigate to the `createOrganizationUrl` where `<CreateOrganization />` is mounted as a page. <br />Defaults to: `modal` |
-| `organizationProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the "Manage organization" button will cause the `<OrganizationProfile />` component to open as a modal, or if the browser will navigate to the `organizationProfileUrl` where `<OrganizationProfile />` is mounted as a page. <br />Defaults to: `modal` |
+| `createOrganizationMode` | `'modal' \| 'navigation'` | Controls whether clicking the **Create organization** button will cause the `<CreateOrganization />` component to open as a modal, or if the browser will navigate to the `createOrganizationUrl` where `<CreateOrganization />` is mounted as a page. <br />Defaults to: `'modal'` |
+| `organizationProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the **Manage organization** button will cause the `<OrganizationProfile />` component to open as a modal, or if the browser will navigate to the `organizationProfileUrl` where `<OrganizationProfile />` is mounted as a page. <br />Defaults to: `'modal'` |
 | `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate to after the user leaves the currently active organization. |
 | `afterSwitchOrganizationUrl` | `string` | Full URL or path to navigate after a successful organization switch. |
 | `hidePersonal` | `boolean` | By default, users can switch between organization and their personal account. This option controls whether `<OrganizationSwitcher />` will include the user's personal account in the organization list. Setting this to `false` will hide the personal account entry, and users will only be able to switch between organizations. <br />Defaults to: `true` |
