--- a/docs/references/javascript/email-address/verification.mdx
+++ b/docs/references/javascript/email-address/verification.mdx
@@ -3,10 +3,6 @@ title: EmailAddress Verification
 description: These are all methods on the EmailAddress class that allow you to verify a user's email address.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `EmailAddress` Verification
 
 These are all methods on [the `EmailAddress` class](/docs/references/javascript/email-address/email-address) that allow you to verify a user's email address.
@@ -28,8 +24,8 @@ Kick off the verification process for this email address. An email message with 
     {cells: [<code>strategy </code>, <code>string</code>, <>
     The verification strategy. Possible strategy values are:
     <ul>
-    <li><strong><code>email_link</code></strong>:  User will receive an email magic link via email.</li>
-    <li><strong><code>email_code</code></strong>: User will receive a one-time authentication code via email.</li>
+    <li><code>email_link</code>:  User will receive an email magic link via email.</li>
+    <li><code>email_code</code>: User will receive a one-time authentication code via email.</li>
     </ul>
     </>]},
     {cells: [<code>redirectUrl</code>, <code>string | undefined</code>, <>The magic link target URL. Users will be redirected here once they click the magic link from their email. This param only applies if <code>strategy</code> is <code>email_link</code></>]},
