--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -3,10 +3,6 @@ title: Organization Members
 description: These are all methods on the Organization class that allow you to manage the members of an organization.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Organization Members
 
 These are all methods on [the Organization class](/docs/references/javascript/organization/organization) that allow you to manage the members of an organization.
@@ -70,7 +66,7 @@ Please note that only administrators can add members to an organization.
   {cells: [
   <code>userId</code>,
   <code>string</code>,
-  "The id of the user that will be added as a member to the organization.",
+  "The ID of the user that will be added as a member to the organization.",
   ]},
   {cells: [
   <code>role</code>,
