--- a/docs/references/javascript/sign-up/phone-verification.mdx
+++ b/docs/references/javascript/sign-up/phone-verification.mdx
@@ -3,10 +3,6 @@ title: Phone Verification
 description: These are all methods on the SignUp class that allow you to verify a user's sign-up request via a phone number.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Phone verification
 
 These are all methods on [the `SignUp` class](/docs/references/javascript/sign-up/sign-up) that allow you to verify a user's sign-up request via a phone number.
@@ -33,7 +29,7 @@ This is equivalent to calling [`SignUp.prepareVerification("phone_code")`](/docs
       <>
       The verification strategy to validate the user's sign-up request. The following strategies are supported:
       <ul>
-        <li><strong><code>phone_code</code></strong>: Send an SMS with a unique token to input.</li>
+        <li><code>phone_code</code>: Send an SMS with a unique token to input.</li>
       </ul>
       </>
  ]},
