--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -3,10 +3,6 @@ title: User Password Management
 description: These are the methods that help you manage a user's password.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # User password management
 
 ## `updatePassword()`
@@ -26,7 +22,7 @@ Updates the user's password.
   rows={[
 {cells: [<code>newPassword</code>, <code>string</code>, <>The user's new password.</>]},
 {cells: [<code>currentPassword</code>, <code>string</code>, <>The user's current password.</>]},
-{cells: [<code>signOutOfOtherSessions</code>, <code>boolean | undefined</code>, <>If set to true, all sessions will be signed out.</>]}
+{cells: [<code>signOutOfOtherSessions</code>, <code>boolean | undefined</code>, <>If set to <code>true</code>, all sessions will be signed out.</>]}
  ]}
   />
 
